Added check if player is a guild member.